# headroom

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .releasemetadata  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  llms.txt  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: changelog-guard.yml  ci.yml  docker.yml  docs.yml  eval.yml  init-e2e.yml  merge-conflicts.yml  release.yml  rust.yml  wrap-e2e.yml
benchmarks/: i18n_compression_eval.py
crates/headroom-core/: Cargo.toml
crates/headroom-core/config/: pipeline.toml
crates/headroom-core/src/: lib.rs
crates/headroom-core/src/ccr/backends/: in_memory.rs  mod.rs  sqlite.rs
crates/headroom-core/src/relevance/: embedding.rs
crates/headroom-core/src/transforms/: detection.rs  diff_compressor.rs  log_compressor.rs  magika_detector.rs  mod.rs  search_compressor.rs  unidiff_detector.rs
crates/headroom-core/src/transforms/pipeline/: config.rs  mod.rs  orchestrator.rs
crates/headroom-core/src/transforms/pipeline/offloads/: json_offload.rs  mod.rs  prose_field.rs
crates/headroom-core/src/transforms/smart_crusher/: crusher.rs
crates/headroom-core/src/transforms/text_crusher/: crusher.rs
crates/headroom-core/tests/: ccr_roundtrip.rs
crates/headroom-proxy/: Cargo.toml
crates/headroom-simulators/: Cargo.toml  Dockerfile  README.md
crates/headroom-simulators/src/: application.rs  config.rs  domain.rs  lib.rs  main.rs  presentation.rs
crates/headroom-simulators/tests/: simulator_http.rs
docker/: docker-compose.native.yml
docs/: package-lock.json  package.json
docs/components/: marketing.tsx  mdx.tsx
docs/lib/: layout.shared.ts  shared.ts
e2e/wrap/: run.py
examples/grafana/: headroom-dashboard.json
headroom/: _ort.py  _subprocess.py  _version.py  agent_savings.py  compress.py  config.py  copilot_auth.py  onnx_runtime.py  paths.py  savings_ledger.py  settings_store.py  shared_context.py
headroom/audit/: __init__.py  codex.py  maturation.py
headroom/backends/: anyllm.py  litellm.py
headroom/cache/: compression_cache.py  compression_feedback.py  compression_store.py  compression_strategy_outcomes.py  dynamic_detector.py  prefix_tracker.py  semantic.py
headroom/ccr/: __init__.py  context_tracker.py  mcp_http.py  mcp_server.py  response_handler.py  tool_calls.py  tool_injection.py
headroom/cli/: __init__.py  audit.py  copilot_auth.py  doctor.py  init.py  inspect.py  install.py  learn.py  main.py  mcp.py  memory.py  proxy.py  recover.py  savings.py  update.py  wrap.py
headroom/dashboard/: __init__.py
headroom/evals/: datasets.py
headroom/install/: models.py  paths.py  planner.py  runtime.py  state.py  supervisors.py
headroom/integrations/: __init__.py  litellm_callback.py
headroom/learn/: __init__.py  _shared.py  analyzer.py  verbosity.py  writer.py
headroom/mcp_registry/: __init__.py  claude.py  codex.py  grok.py  install.py  opencode.py  server_json.py
headroom/memory/: core.py  factory.py  mcp_server.py  ports.py  traffic_learner.py
headroom/models/: registry.py
headroom/perf/: analyzer.py
headroom/pricing/: litellm_model_resolution.py  litellm_pricing.py
headroom/providers/: hermes.py  install_registry.py  model_metadata.py  openai.py  openai_compatible.py  openai_images.py  openai_responses.py  proxy_routes.py  proxy_targets.py  registry.py  route_specs.py
headroom/proxy/: auth_mode.py  auth_policy.py  beta_header_merge.py  beta_header_policy.py  body_forwarding.py  ccr_golden_policy.py  ccr_marker_policy.py  ccr_session_tracker.py  cost.py  diagnostic_decode_policy.py  extensions.py  forwarded_headers.py  forwarded_policy.py  helpers.py  image_compression_decision.py  image_compression_policy.py  image_isolation.py  internal_header_policy.py  loop_callback_failure_policy.py  loopback_guard.py  memory_decision.py  memory_decision_policy.py  memory_golden_policy.py  memory_handler.py  memory_injection_mode_policy.py  memory_query.py  memory_query_policy.py  memory_rank_policy.py  memory_ranker.py  memory_tool_adapter.py  model_router.py  models.py  modes.py  outcome.py  output_effort_policy.py  output_savings.py  output_savings_policy.py  output_shaper.py  output_steering.py  output_turn_policy.py  (+34 more)
headroom/subscription/: copilot_quota.py  models.py  session_tracking.py
headroom/telemetry/: context.py  reporter.py
headroom/tokenizers/: base.py  estimator.py  huggingface.py  registry.py  tiktoken_counter.py
headroom/transforms/: cache_aligner.py  code_compressor.py  (+16 more)
scripts/: README.md  bootstrap-windows-dev.ps1  build_npm_release_assets.mjs  build_python_release_smoke.py  install.ps1  install.sh  release_smoke_all.py  verify-ruff-version.py  verify_npm_release_assets.mjs  version-sync.py
tests/: conftest.py  test_agent_savings.py  test_anthropic_compaction_transforms.py  test_anthropic_pre_upstream_backpressure.py  test_anthropic_stage_timings.py  test_audit_codex.py  test_auth_policy.py  test_backend_anyllm.py  test_backend_bugs.py  test_bedrock_prefix_tracker_wiring.py  test_bedrock_tool_result_cache_and_streaming_stats.py  test_beta_header_merge.py  test_beta_header_policy.py  test_builtin_compressor_adapters.py  test_cache_aligner_prefix_stability.py  test_cache_control_move_bust.py  test_ccr_context_tracker.py  test_ccr_feedback.py  test_ccr_golden_policy.py  test_ccr_marker_policy.py  test_ccr_mcp_http.py  test_ccr_mcp_server.py  test_ccr_response_handler.py  test_ccr_response_handler_extra.py  test_ccr_session_tracker.py  test_ccr_tag_placeholder_regression.py  test_ccr_tool_calls.py  test_ccr_tool_injection.py  test_claude_session_mode_benchmark.py  test_cli_doctor.py  test_cli_inspect.py  test_cli_perf_format.py  test_cli_proxy_env.py  test_cli_proxy_improvements.py  test_cli_update.py  test_code_compressor_language_alias.py  test_codex_ws_compression_scheduler.py  test_codex_ws_per_frame_memory.py  test_codex_ws_savings_deferral.py  test_cold_start_fast_pass.py  (+192 more)
wiki/: cli.md  configuration.md  getting-started.md  index.md  macos-deployment.md  proxy.md  quickstart.md
(+177 files in other folders)
