[package]
name = "headroom-simulators"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Configurable local provider simulators for Headroom validation pipelines."

[[bin]]
name = "headroom-simulators"
path = "src/main.rs"

[lib]
name = "headroom_simulators"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net"] }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
http = "1"
crc32fast = "1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
